--- a/app/src/main/res/layout/activity_dash.xml
+++ b/app/src/main/res/layout/activity_dash.xml
@@ -9,6 +9,13 @@
     app:layout_constraintHeight_percent="1"
     app:layout_constraintWidth_percent="1"
     >
+    <Button
+        android:id="@+id/logoutbtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Log Out"
+        android:textColor="@color/white"
+        />
     <FrameLayout
         android:id="@+id/flpicture"
         android:layout_width="80dp"
@@ -41,7 +48,6 @@
         android:layout_marginTop="60dp"
         android:layout_marginStart="30dp"
         android:textSize="30sp"
-        android:text="Ashim Thapa"
         android:textColor="@color/black"
         android:fontFamily="@font/dash_text"
         />
@@ -57,7 +63,7 @@
         android:textColor="@color/carmine"
         android:fontFamily="@font/dash_text"
         />
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/flcontainer1"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -70,7 +76,36 @@
         android:background="@drawable/curved_corners_grey"
         >
 
-    </FrameLayout>
+
+        <ProgressBar
+            android:id="@+id/progressbar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:theme="@style/progress"
+            android:progressDrawable="@drawable/progress_circular"
+
+            />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/progressbar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            >
+
+        <TextView
+            android:id="@+id/txtbattery"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="hello world"
+            android:textSize="20sp" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
@@ -140,6 +175,7 @@
 
 
     </RelativeLayout>
+
 
 
 
